force-app/main/default/objects/Purchase_Order_Line__c/fields/Dept_Code__c.field-meta.xml
<CustomField>
    <fullName>Dept_Code__c</fullName>
    <label>Dept Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>