force-app/main/default/objects/Purchase_Order_Line__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>