force-app/main/default/objects/Purchase_Order_Line__c/fields/GST_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_Group_Code__c</fullName>
    <label>GST Group Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>