force-app/main/default/objects/Purchase_Order_Line__c/fields/Job_No__c.field-meta.xml
<CustomField>
    <fullName>Job_No__c</fullName>
    <label>Job No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>