force-app/main/default/objects/Purchase_Order_Line__c/fields/Line_No__c.field-meta.xml
<CustomField>
    <fullName>Line_No__c</fullName>
    <label>Line No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>