force-app/main/default/objects/Purchase_Order_Line__c/fields/Order_Task_No__c.field-meta.xml
<CustomField>
    <fullName>Order_Task_No__c</fullName>
    <label>Order Task No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>