force-app/main/default/objects/Purchase_Order_Line__c/fields/Outstanding_amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_amount__c</fullName>
    <label>Outstanding amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>