force-app/main/default/objects/Purchase_Order_Line__c/fields/Outstanding_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Quantity__c</fullName>
    <label>Outstanding Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>