force-app/main/default/objects/Purchase_Order_Line__c/fields/PO_Header__c.field-meta.xml
<CustomField>
    <fullName>PO_Header__c</fullName>
    <label>PO Header</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>PO_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>