force-app/main/default/objects/Purchase_Order_Line__c/fields/Qty_Rcd_Not_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Qty_Rcd_Not_Invoiced__c</fullName>
    <label>Qty. Rcd. Not Invoiced</label>
    <length>20</length>
    <type>Text</type>
</CustomField>