force-app/main/default/objects/Purchase_Order_Line__c/fields/Quantity_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Invoiced__c</fullName>
    <label>Quantity Invoiced</label>
    <length>20</length>
    <type>Text</type>
</CustomField>