force-app/main/default/objects/Purchase_Order_Line__c/fields/Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received__c</fullName>
    <label>Quantity Received</label>
    <length>20</length>
    <type>Text</type>
</CustomField>