force-app/main/default/objects/Purchase_Order_Line__c/fields/Responsibility_Center__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Center__c</fullName>
    <label>Responsibility Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>