force-app/main/default/objects/Purchase_Order_Line__c/fields/Unit_Cost_LCY__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_LCY__c</fullName>
    <label>Unit Cost (LCY)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>