force-app/main/default/objects/Purchase_Order_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>BRANCH_CODE__c</columns>
    <columns>Quantity__c</columns>
    <columns>PO_Header__c</columns>
    <columns>Type__c</columns>
    <columns>Outstanding_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>